# hexlet.io

./: .gitignore  Makefile  README.md
10_abstraction/: calculate_distance.py  get_mid_point_of_segment.py  get_quadrant.py  get_xy.py  rational.py  url.py
11_tree/: change_owner.py  compress_images.py  convert.py  downcase_file_names.py  du.py  find_empty_dir_paths.py  find_files_by_name.py  flatten.py  generate_tree.py  get_hidden_files_count.py  get_nodes_count.py  get_subdirectories_info.py  remove_first_level.py  strigify.py
12_io_read_write_file/: output.txt  script.py
13_regexp/: "(?<group>[a-z]{3}):\k<group>"gm  "80(?=:[^a-z]{1,})"gm  "\(.+?\)"gm  "\d\d\[^a-z]"gm  (symbol).gm  3_symbols_a_z.gm  80_proxy.gm  dd____not_a_z.gm  info@hexlet.io  one|two|tree  ruby1.*
14_web/: flask_start.py  jinja_blocks_raw_for_if.py  jinja_filter_macro_call.py  jinja_inheritance.py
14_web_jinja_flask/: Makefile  jinja_Environment_FileSystemLoader.py  jinja_include_import.py  jinja_start_{{____}}.py
16_flask/: Makefile  flask_start.py
18_oop/: Color.py  Counter.py  Counter_2.py  HourClock.py  LimitedCounter.py  README.md  Tree.py  class_Borg.py  nondec.py  (+7 more)
19_django/: Makefile  pyproject.toml
19_django/hello_django/: settings.py  urls.py  views.py
19_django/hello_django/calc/: apps.py  urls.py  views.py
19_django/hello_django/simple_blog/: urls.py  views.py
19_django/hello_django/simple_blog/articles/: apps.py  urls.py  views.py
19_django/hello_django/simple_blog/categories/: apps.py  urls.py  views.py
19_django/hello_django/templates/: about.html  index.html
(+132 files in other folders)
